fixed alignment and mixin name for full width aside in expanded sidebar

--- a/assets/sass/_theme/utils/sidebar.sass
+++ b/assets/sass/_theme/utils/sidebar.sass
@@ -68,11 +68,11 @@
                 border-top: var(--border-width) solid var(--color-border)
                 padding-top: $spacing-3
 
-@mixin sidebar-full-width
+@mixin aside-full-width
     @include container
     > div
+        align-items: baseline
         display: flex
-        align-items: start
         margin-bottom: $spacing-5
     .toc-cta
         margin-bottom: 0
